@@ -21,6 +21,7 @@ import javax.persistence.EntityManagerFactory;
 import javax.persistence.Query;
 
 import org.eclipse.persistence.config.PersistenceUnitProperties;
+import org.eclipse.persistence.internal.helper.Helper;
 import org.eclipse.persistence.internal.jpa.EntityManagerFactoryImpl;
 import org.eclipse.persistence.jpa.test.framework.DDLGen;
 import org.eclipse.persistence.jpa.test.framework.Emf;
@@ -72,14 +73,18 @@ public class TestConvertResultToBoolean {
 
             DatabasePlatform platform = getPlatform(emf);
             if(platform.isDB2() || platform.isDerby()) {
-                assertEquals(new Integer(1), intList.get(0));
-                assertEquals(new Integer(0), intList.get(1));
-            } else if(platform.isOracle()) {
+                assertEquals(Integer.valueOf(1), intList.get(0));
+                assertEquals(Integer.valueOf(0), intList.get(1));
+            } else if(platform.isOracle() && !platform.isOracle23()) {
                 assertEquals(new java.math.BigDecimal(1), intList.get(0));
                 assertEquals(new java.math.BigDecimal(0), intList.get(1));
+            } else if(platform.isOracle() && platform.isOracle23()) {
+                //No conversion happens on Oracle23C platform
+                assertEquals(Boolean.TRUE, intList.get(0));
+                assertEquals(Boolean.FALSE, intList.get(1));
             } else {
-                assertEquals(new Long(1), intList.get(0));
-                assertEquals(new Long(0), intList.get(1));
+                assertEquals(Long.valueOf(1), intList.get(0));
+                assertEquals(Long.valueOf(0), intList.get(1));
             }
         } finally {
             if (em.getTransaction().isActive()) {
